--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
             <h3>Influencer products</h3>
             <div class="header-list">
                 <ul>
-                    <li>Home</li>
-                    <li>Products</li>
-                    <li>Sign up</li>
-                    <li>Log In</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><i class="fas fa-search"></i></li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+
                 </ul>
-                <i class="fas fa-search"></i>
-                <i class="fas fa-shopping-cart"></i>
+
             </div>
         </div>
     </header>
@@ -74,7 +76,7 @@
                         <img src="images/pic-2.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Microphone <br>$120.25</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -91,7 +93,7 @@
                         <img src="images/pic-3.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Airbuds<br>$100.00</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -108,7 +110,7 @@
                         <img src="images/pic-4.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Drone<br>$980.25</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -125,7 +127,7 @@
                         <img src="images/pic-5.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Light Setup <br>$1200.00</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -142,7 +144,7 @@
                         <img src="images/pic-6.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Photoshoot set <br>$820.40</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -159,7 +161,7 @@
                         <img src="images/pic-7.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Vlogging Camera <br>$1800.80</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -176,7 +178,7 @@
                         <img src="images/pic-8.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Green Screen <br>$25.48</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -193,7 +195,7 @@
                         <img src="images/pic-9.png" alt="">
                     </div>
                     <div class="collection-details">
-                        <h2>Flex Tripod <br>$50.48</h2>
+                        <h2>Action Camera <br>$380.00</h2>
                         <div class="collection-info">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -206,7 +208,26 @@
                     </div>
                 </div>
             </div>
+            <div class="scroll-button">
+                <a href="#">See More <i class="fas fa-long-arrow-right"></i></a>
+            </div>
+            <!--Feature section start here-->
         </section>
+        <div class="our-feature">
+            <div class="feature-info">
+                <h1>Featured products at one place</h1>
+                <hr>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. <br> Velit officia consequat duis enim velit mollit.
+                    Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+            <div class="feature-image">
+                <img src="images/photo-1.jfif" alt="">
+                <img src="images/photo-2.jfif" alt="">
+                <img src="images/photo-3.jfif" alt="">
+            </div>
+            <a class="influencer-button" href="#">Join with us<i class="fas fa-long-arrow-right"></i></a>
+        </div>
     </main>
     <!-- Footer section start here -->
     <footer class="footer-container">
