--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </section>
+        <section class="company-logo">
+            <hr>
+            <div class="logos">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+            <hr>
+        </section>
         <!-- Popular-Collections start here -->
         <section class="Popular-Collections">
             <h2>Popular Collection</h2>
