--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <!-- influencer-Journey section start here -->
         <section class="influencer">
             <div class="influencer-Journey">
-                <h1>Start your Journey as
-                    Influencer</h1>
+                <h1>Start your Journey as Influencer</h1>
                 <p>Make smarter decisions by qualifying your influencers through a data-driven approach.</p>
                 <a class="influencer-button" href="#">Preebook now <i class="fas fa-long-arrow-right"></i></a>
             </div>
